[tool.poetry]
name = "resume-generator"
version = "0.1.0"
description = ""
authors = ["Jacob Root <me@rooty.dev>"]
license = "AGPL 3.0"
readme = "README.md"
packages = [{include = "resume_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.1"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "pre-commit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
